--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Joel Edwards <joeledwards@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@buzuli/color": "^1.1.1",
     "bluebird": "^3.5.1",
     "chalk": "^2.3.0",
     "durations": "^3.2.1",
